--- a/project1.htm
+++ b/project1.htm
@@ -58,6 +58,7 @@
 </div>
 <div id="speedometr" class="speedometr">
 <span>Current speed: </span><span id="speedIndicator">00 </span><span>m/s</span>
+high accuracy
 <div>
     Current heading: <span id="angleIndicator">00</span>
 </div>
