--- a/project1.htm
+++ b/project1.htm
@@ -114,6 +114,7 @@ high accuracy
         timeObject.innerHTML = currentTime;
         spObject.innerHTML = position.coords.speed;
         headingObject.innerHTML = position.coords.heading;
+        rotateRider(position.coords.heading);
    
 
 
