--- a/project1.htm
+++ b/project1.htm
@@ -142,6 +142,8 @@
             position.coords.speed = Math.random() * 3;
             position.coords.heading = Math.random() * 120;
         */
+        console.log(position.coords.latitude)
+        console.log(position.coords.speed)
         latObject.innerHTML = position.coords.latitude;
         longObject.innerHTML = position.coords.longitude;
         timeObject.innerHTML = currentTime;
