--- a/project1.htm
+++ b/project1.htm
@@ -44,7 +44,7 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <div class="firstLevelContainer">
- <h6>Demostration geolocation module v.1.1</h6>
+ <h6>Demostration geolocation module v.1.2</h6>
  <div>
      current coordinates:
      <div class="coordinates">
@@ -143,6 +143,7 @@
             position.coords.heading = Math.random() * 120;
         */
         console.log(position.coords.latitude)
+        console.log("intermediate");
         console.log(position.coords.speed)
         latObject.innerHTML = position.coords.latitude;
         longObject.innerHTML = position.coords.longitude;
