--- a/project1.htm
+++ b/project1.htm
@@ -137,6 +137,7 @@
         let currentTime = new Date();
         let result = new Array();
         console.log(currentTime);
+        console.log("1!");
         /*    position.coords.latitude = Math.random() * 360;
             position.coords.longitude = Math.random() * 360;
             position.coords.speed = Math.random() * 3;
