--- a/project1.htm
+++ b/project1.htm
@@ -148,8 +148,8 @@
                 count1hWatches++;
             }
         }
-        speedAverage5 = speedSumm / 5;
-        headingAverage5 = headingSumm / 5;
+        speedAverage5 = speedSumm5 / 5;
+        headingAverage5 = headingSumm5 / 5;
         speedAverage10m = speedSumm10m / count10mWathches;
         speedAverage1h = speedSumm1h / count1hWatches;
         return [speedAverage5, headingAverage5, speedAverage10m, speedAverage1h];
