--- a/project1.htm
+++ b/project1.htm
@@ -44,7 +44,7 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <div class="firstLevelContainer">
- <h6>Demostration geolocation module v.1.5</h6>
+ <h6>Demostration geolocation module v.1.5.1</h6>
  <div>
      current coordinates:
      <div class="coordinates">
@@ -135,7 +135,7 @@
         let count10mWathches = 0;
         let count1hWatches = 0;
         for (let i = averagerArray.length - 1; i >0 ; i--){
-            if (i<6){
+            if (i<averagerArray.length - 5){
                 speedSumm5 += averagerArray[i][0];
                 headingSumm5 += averagerArray[i][1];
             }
@@ -174,10 +174,10 @@
         latObject.innerHTML = position.coords.latitude;
         longObject.innerHTML = position.coords.longitude;
         timeObject.innerHTML = currentTime;
-        stack.push(position.coords.speed, position.coords.heading, position.timestamp)
+        stack.push(position.coords.speed, position.coords.heading + 360, position.timestamp)
         result = calculateAverage();
         speed5 = result[0];
-        heading = result[1];
+        heading = result[1] - 360;
         speed10m = result[2];
         speed1h = result[3];
 
