--- a/project1.htm
+++ b/project1.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="windows-1251">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -22,18 +22,18 @@
             <div class="inputElementClass">
                 <input id="pilotId" type="text">
                 <input id="timeShift" type="text">
-                <label for="inputPilotButton"><input type="button" id="inputPilotButton" value="Введите летуна" onclick="getPilot()"></label>
+                <label for="inputPilotButton"><input type="button" id="inputPilotButton" value="Р’РІРµРґРёС‚Рµ Р»РµС‚СѓРЅР°" onclick="getPilot()"></label>
             </div>
         </div>
         <div class="pilotDataElementClass row align-items-center">
                 <div class="col-6">
-                    <div>высота</div>
-                    <div>скорость мгновенная</div>
-                    <div>скорость усредененная</div>
-                    <div>расстояние</div>
-                    <div>направление</div>
-                    <div>смещенная дата</div>
-                    <div>последняя дата</div>
+                    <div>РІС‹СЃРѕС‚Р°</div>
+                    <div>СЃРєРѕСЂРѕСЃС‚СЊ РјРіРЅРѕРІРµРЅРЅР°СЏ</div>
+                    <div>СЃРєРѕСЂРѕСЃС‚СЊ СѓСЃСЂРµРґРµРЅРµРЅРЅР°СЏ</div>
+                    <div>СЂР°СЃСЃС‚РѕСЏРЅРёРµ</div>
+                    <div>РЅР°РїСЂР°РІР»РµРЅРёРµ</div>
+                    <div>СЃРјРµС‰РµРЅРЅР°СЏ РґР°С‚Р°</div>
+                    <div>РїРѕСЃР»РµРґРЅСЏСЏ РґР°С‚Р°</div>
                 </div >
                 <div class="col-6">
                     <div id="altitude">0</div>
