--- a/project1.htm
+++ b/project1.htm
@@ -17,10 +17,10 @@
     <div class="container firstLevelContainer">
         <div class="inputPilotClass row">
             <div class="headerClass">
-                <h6>Shlyapa web v.1.6</h6>
+                <h6>Shlyapa web v.1.7</h6>
             </div>
             <div class="inputElementClass">
-                <input id="pilotId" type="text">
+                <input id="pilotId" type="text" value="4673">
                 <input id="timeShift" type="text">
                 <label for="inputPilotButton"><input type="button" id="inputPilotButton" value="Введите летуна" onclick="getPilot()"></label>
             </div>
