added check symbol

--- a/project1.htm
+++ b/project1.htm
@@ -22,20 +22,21 @@
             <div class="inputElementClass">
                 <input id="pilotId" type="text" value="4673">
                 <input id="timeShift" type="text">
-                <label for="inputPilotButton"><input type="button" id="inputPilotButton" value="Введите летуна" onclick="getPilot()"></label>
+                <label for="inputPilotButton" class="inputButtonClass" id="inputButtonElement"><input type="button" id="inputPilotButton"  value="Введите летуна" onclick="getPilot()"></label>
+                
             </div>
         </div>
         <div class="pilotDataElementClass row align-items-center">
-                <div class="col-7">
-                    <div>высота</div>
-                    <div>скорость мгновенная</div>
-                    <div>скорость усредененная</div>
-                    <div>расстояние</div>
-                    <div>направление</div>
-                    <div>смещенная дата</div>
-                    <div>последняя дата</div>
-                </div >
                 <div class="col-5">
+                    <div>высота, м</div>
+                    <div>скорость мгн. км/ч</div>
+                    <div>скорость уср. км/ч</div>
+                    <div>расстояние, км</div>
+                    <div>направление, гр.</div>
+                    <div>дата наблюдения</div>
+                    <div>данные от</div>
+                </div >
+                <div class="col-7">
                     <div id="altitude">0</div>
                     <div id="instantSpeed">00</div>
                     <div id="averageSpeed">00</div>
