--- a/project1.htm
+++ b/project1.htm
@@ -17,7 +17,7 @@
     <div class="container firstLevelContainer">
         <div class="inputPilotClass row">
             <div class="headerClass">
-                <h6>Shlyapa web v.1.8</h6>
+                <h6>Shlyapa web v.1.9</h6>
             </div>
             <div class="inputContainerClass">
                 <div class="inputElementClass row gx-1">
@@ -55,6 +55,7 @@
                     <div>направление, гр.</div>
                     <div>дата наблюдения</div>
                     <div>данные от</div>
+                    <div>точн. GPS тел., м.</div>
                 </div >
                 <div class="col-6">
                     <div class="noDataClass" id="altitude">0</div>
@@ -65,6 +66,7 @@
                     <div class="noDataClass" id="direction">0</div>
                     <div class="noDataClass" id="shiftedDate">00-00-0000 00:00:00</div>
                     <div class="noDataClass" id="actualDate">00-00-0000 00:00:00</div>
+                    <div class="noDataClass" id="accuracy">00</div>
                 </div>
         </div>
         <div id="speedometr" class="speedometr row">
