--- a/project1.htm
+++ b/project1.htm
@@ -17,7 +17,7 @@
     <div class="container firstLevelContainer">
         <div class="inputPilotClass row">
             <div class="headerClass">
-                <h6>Shlyapa web v.0.9.4a</h6>
+                <h6>Shlyapa web v.0.9.4b</h6>
             </div>
             <div class="inputContainerClass">
                 <div class="inputElementClass row gx-1">
@@ -56,10 +56,10 @@
                     <div>дата наблюдения</div>
                     <div>данные от</div>
                     <div>точн. GPS тел., м.</div>
-                    <div>lat</div>
-                    <div>long</div>
-                    <div>speed</div>
-                    <div>heading</div>
+                    <div>instant heading</div>
+                    <div>average heading</div>
+                    <div>azimut</div>
+                    <div>diff azimut</div>
                 </div >
                 <div class="col-6">
                     <div class="noDataClass" id="altitude">0</div>
@@ -71,10 +71,10 @@
                     <div class="noDataClass" id="shiftedDate">00-00-0000 00:00:00</div>
                     <div class="noDataClass" id="actualDate">00-00-0000 00:00:00</div>
                     <div class="noDataClass" id="accuracy">00</div>
-                    <div class="noDataClass" id="lat">0</div>
-                    <div class="noDataClass" id="long">0</div>
-                    <div class="noDataClass" id="sp">0</div>
-                    <div class="noDataClass" id="he">0</div>
+                    <div class="noDataClass" id="iHeading">0</div>
+                    <div class="noDataClass" id="aHeading">0</div>
+                    <div class="noDataClass" id="azimut">0</div>
+                    <div class="noDataClass" id="dAzimut">0</div>
                 </div>
         </div>
         <div id="speedometr" class="speedometr row">
