--- a/project1.htm
+++ b/project1.htm
@@ -17,7 +17,7 @@
     <div class="container firstLevelContainer">
         <div class="inputPilotClass row">
             <div class="headerClass">
-                <h6>Shlyapa web v.1.0.2a</h6>
+                <h6>Shlyapa web v.1.0.2b</h6>
             </div>
             <div class="inputContainerClass">
                 <div class="inputElementClass row gx-1">
