--- a/project1.htm
+++ b/project1.htm
@@ -17,7 +17,7 @@
     <div class="container firstLevelContainer">
         <div class="inputPilotClass row">
             <div class="headerClass">
-                <h6>Shlyapa web v.1.0.2b</h6>
+                <h6>Shlyapa web v.1.0.2c</h6>
             </div>
             <div class="inputContainerClass">
                 <div class="inputElementClass row gx-1">
@@ -39,7 +39,7 @@
                 <div class="inputElementClass row">
                     <div class="col-12 justify-content-center">
                         <label for="inputPilotButton" class="inputButtonClass" id="inputButtonElement">
-                            <input type="button" id="inputPilotButton"  value="Введите летуна" onclick="getPilot()">
+                            <input type="button" id="inputPilotButton"  value="Введите летуна" onclick="inputPilot()">
                         </label>
                     </div>
                 </div>
