--- a/project1.htm
+++ b/project1.htm
@@ -17,7 +17,7 @@
     <div class="container firstLevelContainer">
         <div class="inputPilotClass row">
             <div class="headerClass">
-                <h6>Shlyapa web v.1.0.4</h6>
+                <h6>Shlyapa web v.1.0.4a</h6>
             </div>
             <div class="inputContainerClass">
                 <div class="inputElementClass row gx-1">
@@ -46,7 +46,7 @@
                 <div class="inputElementClass row">
                     <div class="col-12 justify-content-center">
                         <label for="inputPilotButton" class="inputButtonClass" id="inputButtonElement">
-                            <input type="button" id="inputPilotButton"  value="devOrientation" onclick="switchToDevori()">
+                            <input type="button" id="inputModeButton"  value="devOrientation" onclick="switchToDevori()">
                         </label>
                     </div>
                 </div>
