--- a/project1.htm
+++ b/project1.htm
@@ -45,7 +45,7 @@
                 </div>
                 <div class="inputElementClass row">
                     <div class="col-12 justify-content-center">
-                        <label for="inputPilotButton" class="inputButtonClass" id="inputButtonElement">
+                        <label for="inputModeButton" class="inputButtonClass" id="inputModeElement">
                             <input type="button" id="inputModeButton"  value="devOrientation" onclick="switchToDevori()">
                         </label>
                     </div>
