--- a/project1.htm
+++ b/project1.htm
@@ -17,7 +17,7 @@
     <div class="container firstLevelContainer">
         <div class="inputPilotClass row">
             <div class="headerClass">
-                <h6>Shlyapa web v.1.0.5</h6>
+                <h6>Shlyapa web v.1.0.5a</h6>
             </div>
             <div class="inputContainerClass">
                 <div class="inputElementClass row gx-1">
@@ -63,6 +63,11 @@
                     <div>дата наблюдения</div>
                     <div>данные от</div>
                     <div>точн. GPS тел., м.</div>
+                    <div>gpsHeading</div>
+                    <div>devOriHeading</div>
+                    <div>azimut</div>
+                    <div>toPilotHeadingGps</div>
+                    <div>toPilotHeadingDevOri</div>
                 </div >
                 <div class="col-6">
                     <div class="noDataClass" id="altitude">0</div>
@@ -74,6 +79,11 @@
                     <div class="noDataClass" id="shiftedDate">00-00-0000 00:00:00</div>
                     <div class="noDataClass" id="actualDate">00-00-0000 00:00:00</div>
                     <div class="noDataClass" id="accuracy">00</div>
+                    <div class="noDataClass" id="gpsH">00</div>
+                    <div class="noDataClass" id="devOriH">00</div>
+                    <div class="noDataClass" id="az">00</div>
+                    <div class="noDataClass" id="toPHGps">00</div>
+                    <div class="noDataClass" id="toPHDevOri">00</div>
                 </div>
         </div>
         <div id="speedometr" class="speedometr row">
