changing input button behavior

--- a/project1.htm
+++ b/project1.htm
@@ -38,15 +38,15 @@
                 </div>
                 <div class="inputElementClass row">
                     <div class="col-12 justify-content-center">
-                        <label for="inputPilotButton" class="inputButtonClass" id="inputButtonElement">
-                            <input type="button" id="inputPilotButton"  value="Введите летуна" onclick="inputPilot()">
+                        <label for="inputPilotButton"  id="inputPilotLabel" class="inputButtonLabelClass">
+                            <input type="button" id="inputPilotButton" class="inputButtonClass" value="Введите летуна" onclick="inputPilot()">
                         </label>
                     </div>
                 </div>
                 <div class="inputElementClass row">
                     <div class="col-12 justify-content-center">
-                        <label for="inputModeButton" class="inputButtonClass" id="inputModeElement">
-                            <input type="button" id="inputModeButton"  value="devOrientation" onclick="switchToDevori()">
+                        <label for="inputModeButton"  id="inputModeLabel" class="inputButtonLabelClass">
+                            <input type="button" id="inputModeButton" class="inputButtonClass" value="devOrientation" onclick="switchToDevori()">
                         </label>
                     </div>
                 </div>
